[project]
name = "my-tutorials-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Dihardja",email = "daniel@dihardja.de"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
langgraph-cli = {extras = ["inmem"], version = "^0.2.12"}

